<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_hideable="true"
    app:behavior_peekHeight="150dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/standard_bottom_sheet"
        style="?attr/bottomSheetStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen_8"
        android:paddingBottom="@dimen/dimen_8"
        app:cardCornerRadius="@dimen/dimen_8"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                android:contentDescription="@string/vehicle_image"
                android:src="@drawable/ic_charging_station"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_title"
                style="@style/BottomSheetTextView"
                android:layout_marginTop="@dimen/dimen_16"
                app:layout_constraintStart_toEndOf="@+id/iv_image"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="type"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_address_header"
                style="@style/BottomSheetTextView"
                android:paddingBottom="@dimen/dimen_4"
                android:gravity="center_vertical"
                android:text="@string/address"
                app:layout_constraintStart_toEndOf="@+id/iv_image"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_address_text"
                style="@style/BottomSheetTextView"
                app:layout_constraintStart_toEndOf="@+id/iv_image"
                app:layout_constraintTop_toBottomOf="@+id/tv_address_header"
                tools:text="@string/max_speed"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_number_of_point_header"
                style="@style/BottomSheetTextView"
                app:layout_constraintStart_toEndOf="@+id/iv_image"
                app:layout_constraintTop_toBottomOf="@+id/tv_address_text"
                android:text="@string/number_of_point"
                tools:text="@string/number_of_point"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_number_of_point"
                style="@style/BottomSheetTextView"
                app:layout_constraintStart_toEndOf="@+id/iv_image"
                app:layout_constraintTop_toBottomOf="@+id/tv_number_of_point_header"
                tools:text="@string/has_helmet_box"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>